--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,10 @@
 {
-    "python.linting.mypyEnabled": false,
-    "python.linting.pycodestyleEnabled": false,
     "python.linting.flake8Enabled": true,
     "python.linting.enabled": true,
     "editor.defaultFormatter": "ms-python.black-formatter",
-    "python.formatting.provider": "none",
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "flake8.args": [
+        "--max-line-length=88",
+        "--exclude=*_test*"
+    ]
 }
