feat: add cli create command
Also adds pythonpath to workdir in the Dockerfile

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -15,4 +15,6 @@ WORKDIR /home/python/app
 
 ENV PIP_ENV_VENV_IN_PROJECT=True
 
+ENV PYTHONPATH="$PYTHONPATH:/home/python/app" 
+
 CMD [ "tail", "-f", "/dev/null" ]
